src/objects/API_Log__c.object
<CustomObject>
    <description>Used to capture logs about inbound and outbound API calls</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Callout_endpoint__c</fullName>
        <label>Callout endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Callout_type__c</fullName>
        <description>Determines whether its a inbound out bound callout</description>
        <label>Callout type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <externalId>true</externalId>
        <label>Correlation Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <description>Used to capture work flow ID while Zuora callout</description>
        <label>Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <description>Response time in ms</description>
        <label>Response Time</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <description>Times the callout was retried</description>
        <label>Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed with time out</fullName>
                </value>
                <value>
                    <fullName>Failed with errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>API Log</label>
    <listViews>
        <fullName>Account_Creation</fullName>
        <columns>NAME</columns>
        <columns>Callout_endpoint__c</columns>
        <columns>Callout_type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Correlation_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Callout_endpoint__c</field>
            <operation>equals</operation>
            <value>/api/event/CustomerCreated</value>
        </filters>
        <label>Account Creation</label>
    </listViews>
    <listViews>
        <fullName>Account_Creation_Update</fullName>
        <columns>NAME</columns>
        <columns>Callout_endpoint__c</columns>
        <columns>Callout_type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Account Creation/Update</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Code__c</columns>
        <columns>Callout_endpoint__c</columns>
        <columns>Process_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lead_API</fullName>
        <columns>NAME</columns>
        <columns>Callout_endpoint__c</columns>
        <columns>Callout_type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Callout_endpoint__c</field>
            <operation>equals</operation>
            <value>/api/event/LeadCreated</value>
        </filters>
        <label>Lead API</label>
    </listViews>
    <listViews>
        <fullName>Outbound</fullName>
        <columns>NAME</columns>
        <columns>Callout_endpoint__c</columns>
        <columns>Callout_type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Callout_type__c</field>
            <operation>equals</operation>
            <value>Outbound</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2021 12:00 AM</value>
        </filters>
        <label>Outbound</label>
    </listViews>
    <listViews>
        <fullName>Subscription</fullName>
        <columns>NAME</columns>
        <columns>Callout_endpoint__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Callout_endpoint__c</field>
            <operation>contains</operation>
            <value>subscription</value>
        </filters>
        <label>Subscription</label>
    </listViews>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>API Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>